fix spacing and styling

--- a/client/src/Components/FollowMe.css
+++ b/client/src/Components/FollowMe.css
@@ -12,4 +12,10 @@
 
 .twitter {
     padding: 2px;
+    color: #49a1eb;
+}
+
+.instagram {
+    padding: 2px;
+    color: black;
 }
